# Mocktopus

./: Cargo.toml
macros/: Cargo.toml
macros/src/: header_builder.rs  item_injector.rs
src/: mock_store.rs  mocking.rs  mocking_utils.rs
tests/: injecting.rs  mocking.rs
