[package]
name = "mocktopus"
version = "0.7.12"
authors = [
    "CodeSandwich <igor.zuk@protonmail.com>",
    "gregdhill <gregorydhill@outlook.com>",
    "notheotherben <contact@sierrasoftworks.com>"
]
description = "Mocking framework for Rust"
readme = "crates_io_readme.md"
keywords = ["testing", "mocking", "tdd"]
categories = ["development-tools::testing"]
repository = "https://github.com/CodeSandwich/Mocktopus"
license = "MIT"
exclude = ["logo.png", "logo.svg"]
edition = "2018"

[badges]
travis-ci = { repository = "CodeSandwich/Mocktopus" }

[lib]
doctest = false

[dependencies]
mocktopus_macros = { path = "./macros" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
members = ["macros"]
